k3s/go-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-deployment
  labels:
    app: go-server
spec:
  replicas: 6
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
      - name: go-server
        image: ghcr.io/agmcc/csc8499/go-server
      imagePullSecrets:
        - name: ghcr
