k3s/go-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
spec:
  type: NodePort
  selector:
    app: go-server
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30000
