k3s/go-server-ingress.yml
# TODO: Update to new version of the API
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-server-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /load
        backend:
          serviceName: go-server-service
          servicePort: 8080
